--- a/intro/index.html
+++ b/intro/index.html
@@ -2,14 +2,17 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Intro</title>
+        <title>Intro - Libraries</title>
 
-        <script src="app.js" type="text/javascript"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
     </head>
     <body>
 
-        <button>Click Me</button>
+        <button class="btn btn-primary">Click Me</button>
 
     </body>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="app.js" type="text/javascript"></script>
 </html>
