--- a/attend.html
+++ b/attend.html
@@ -2,7 +2,7 @@
 layout: page
 title: "Next Meetup"
 description: "Attend a coder forge"
-js: attend.js
+js: js/attend.js
 css: attend.css
 ---
 {% include JB/setup %}
