--- a/posts.html
+++ b/posts.html
@@ -2,6 +2,9 @@
 layout: page
 title: "Posts"
 description: ""
+js:
+  - bower_components/mixitup/src/jquery.mixitup.js
+  - js/posts.js
 ---
 {% include JB/setup %}
 
