add resources & tools

--- a/tools.html
+++ b/tools.html
@@ -11,19 +11,80 @@ css: tools.css
 
 <a href="#" class="btn btn-default filter" data-filter="all">All</a>
 <a href="#" class="btn btn-default filter" data-filter=".languages">Languages</a>
+<a href="#" class="btn btn-default filter" data-filter=".ides">Community</a>
+<a href="#" class="btn btn-default filter" data-filter=".ml">Machine Learning</a>
 <a href="#" class="btn btn-default filter" data-filter=".ides">IDE's</a>
+<a href="#" class="btn btn-default filter" data-filter=".browser">Browsers</a>
+<a href="#" class="btn btn-default filter" data-filter=".node">Node</a>
+<a href="#" class="btn btn-default filter" data-filter=".framework">Frameworks</a>
+<a href="#" class="btn btn-default filter" data-filter=".tool">Tools</a>
+<a href="#" class="btn btn-default filter" data-filter=".book">Books</a>
+<a href="#" class="btn btn-default filter" data-filter=".web">Web Dev</a>
 <br>
 <div class="cards" id="cards">
   <div class="mix languages javascript node">
     <a href="https://nodejs.org/en/" target="_new">NodeJS</a>
     <p>Allows JavaScript to be used on the server</p>
   </div>
-  <div class="mix sandboxs">Item</div>
-  <div class="mix">Item</div>
-  <div class="mix ides">Item</div>
-  <div class="mix sandboxs ides">Item</div>
-  <div class="mix sandboxs">Item</div>
-  <div class="mix ides">Item</div>
-  <div class="mix sandboxs ides">Item</div>
-  <div class="mix sandboxs">Item</div>
+  <div class="mix community">
+    <a href="http://coderscrowd.com/">coderscrowd</a>
+    <p>Community of coders, sharing, helping and learning</p>
+  </div>
+  <div class="mix community ml">
+    <a href="https://www.kaggle.com">kaggle</a>
+    <p>Community of data scientists based on learning and sharing through
+    competitions and tutorials.</p>
+  </div>
+  <div class="mix ides tool">
+    <a href="https://atom.io/">Atom</a>
+    <p>
+      Open source editor, handles nearly all languages. Recommended.
+    </p>
+  </div>
+  <div class="mix browser tool">
+    <a href="https://www.mozilla.org/en-GB/firefox/developer/">Firefox Developer</a>
+    <p>
+      Open source browser build for developers. Includes some interesting tools,
+      but can be buggy at time of writing. Recommended.
+    </p>
+  </div>
+  <div class="mix browser tool">
+    <a href="https://www.chromium.org/Home">Chromium</a>
+    <p>
+      Open source port of Google Chrome. May be difficult to install on
+      windows. Recommended.
+    </p>
+  </div>
+  <div class="mix framework node">
+    <a href="https://www.meteor.com">MeteorJS</a>
+    <p>
+      Framework based on reactive data. Very interesting.
+    </p>
+  </div>
+  <div class="mix tool">
+    <a href="https://www.docker.com">Docker</a>
+    <p>
+      A must have tool. Allows provisioning and running one OS on another using
+      a technology known as containerisation.
+    </p>
+  </div>
+  <div class="mix book web">
+    <a href="http://www.designingfortheweb.co.uk/">Designing For the Web - free ebook</a>
+    <p>
+      Excellent book for beginners to web development.
+    </p>
+  </div>
+  <div class="mix book">
+    <a href="http://lifehacker.com/5744113/learn-to-code-the-full-beginners-guide">Lear to code the full beginners guide</a>
+    <p>
+      The name says it all. Series of quick tutorials on the basics of coding.
+    </p>
+  </div>
+  <div class="mix community">
+    <a href="http://www.codecademy.com/learn">codecademy</a>
+    <p>
+      Probably the best online resource for learning a new language, for
+      beginners and pro's. Highly recommended.
+    </p>
+  </div>
 </div>
