--- a/tools.html
+++ b/tools.html
@@ -23,8 +23,13 @@ css: tools.css
 <br>
 <div class="cards" id="cards">
   <div class="mix languages javascript node">
-    <a href="https://nodejs.org/en/" target="_new">NodeJS</a>
-    <p>Allows JavaScript to be used on the server</p>
+    <a href="https://nodejs.org/en/" target="_blank">
+      <img src="{{ ASSET_PATH }}/coder-forge/images/icon-nodejs-100x43.png">
+      NodeJS
+    </a>
+    <p>
+      Allows JavaScript to be used on the server
+    </p>
   </div>
   <div class="mix community">
     <a href="http://coderscrowd.com/">coderscrowd</a>
@@ -42,7 +47,10 @@ css: tools.css
     </p>
   </div>
   <div class="mix browser tool">
-    <a href="https://www.mozilla.org/en-GB/firefox/developer/">Firefox Developer</a>
+    <a href="https://www.mozilla.org/en-GB/firefox/developer/">
+      <img src="{{ ASSET_PATH }}/coder-forge/images/icon-firefox-85x84.png">
+      Firefox Developer
+    </a>
     <p>
       Open source browser build for developers. Includes some interesting tools,
       but can be buggy at time of writing. Recommended.
@@ -62,7 +70,10 @@ css: tools.css
     </p>
   </div>
   <div class="mix tool">
-    <a href="https://www.docker.com">Docker</a>
+    <a href="https://www.docker.com">
+      <img src="{{ ASSET_PATH }}/coder-forge/images/icon-docker-100x89.png">
+      Docker
+    </a>
     <p>
       A must have tool. Allows provisioning and running one OS on another using
       a technology known as containerisation.
