--- a/tools.html
+++ b/tools.html
@@ -86,7 +86,7 @@ css: tools.css
     </p>
   </div>
   <div class="mix book">
-    <a href="http://lifehacker.com/5744113/learn-to-code-the-full-beginners-guide">Lear to code the full beginners guide</a>
+    <a href="http://lifehacker.com/5744113/learn-to-code-the-full-beginners-guide">Learn to code the full beginners guide</a>
     <p>
       The name says it all. Series of quick tutorials on the basics of coding.
     </p>
@@ -97,5 +97,14 @@ css: tools.css
       Probably the best online resource for learning a new language, for
       beginners and pro's. Highly recommended.
     </p>
+  </div>
+  <div class="mix community node tools">
+    <a href="http://nodeschool.io" style="background-color: #FFE51F">
+      <img src="{{ ASSET_PATH }}/coder-forge/images/icon-nodeschool.svg">
+      NODESCHOOL
+    <p>
+      "Open source workshops that teach web software skills. Do them on your own or at a workshop nearby" - nodeschool.io
+    </p>
+
   </div>
 </div>
